[package]
name = "md_serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.1", features = [ "rt-multi-thread", "macros", "fs", "process" ] }
axum = { version = "0.7.5", features = [ "macros", "tokio", "http2" ] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
config = "0.14.0"
mime_guess = "2.0.5"
